--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#"><img src="Assets/Favoritos.svg" alt="Favoritos" class="container__imagem"></a>
             <a href="#"><img src="Assets/Compras.svg" alt="Compras" class="container__imagem"></a>
             <a href="#"><img src="Assets/Usuario.svg" alt="Usuario" class="container__imagem"></a>
+            <a href="#"><img src="Assets/Usuario.svg" alt="Usuario" class="container__imagem"></a>
         </div>
     </header>
 </body>
