--- a/index.html
+++ b/index.html
@@ -155,8 +155,50 @@
                     <a href="#" class="botoes__ancora">Saiba mais</a>
                 </div>
         </div>
+    </section>
+    <!-- 4° section -->
+    <section class="topicos">
+        <h2 class="topicos__titulos">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Android</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Marketing Digital</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Agile</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Startups</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">HTML & CSS</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Python</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">OO</a>
+            </li>
+            <li class="topicos__itens">
+                <a href="#" class="topicos__links">Java</a>
+            </li>
+        </ul>
 
-
+    </section>
+    <!-- 5° Section -->
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+    
+    <hr>
+    <footer class="rodapé">
+        <h2 class="rodapé__titulo">Grupo Alura</h2>
+    </footer>
+ 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     
     <script>
